Moved the constant parameters into the Gradle build file and are passing them in to the application as system properties